fixed white space, updated some text, added timestamp col

--- a/css/mystylesheet.css
+++ b/css/mystylesheet.css
@@ -64,7 +64,8 @@ body{
 }
 
 .col-episode{
-min-width: 75px;
+    padding-left:100px;
+ min-width: 75px;
  max-width: 75px;
  width: 75px;   
 }
@@ -92,5 +93,5 @@ min-width: 75px;
 }
 
 .my-footer-text{
-    padding-top: 5px;
+    padding-top: 10px;
 }
